syntax = "proto3";

package api.v1.project;

import "api/v1/project/project.proto";
import "model/common.proto";
import "model/git.proto";
import "model/metrics.proto";
import "model/pipeline.proto";
import "model/notification.proto";

// The service to manage your projects.
service Service {
  // Create project.
  rpc Create(CreateRequest) returns (CreateResponse) {}
  // Delete project.
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  // Get project.
  rpc Get(GetRequest) returns (GetResponse) {}
  // Get project list.
  rpc List(ListRequest) returns (ListResponse) {}
  // Update updates the profile of the project.
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  // Get public key.
  rpc PublicKey(PublicKeyRequest) returns (PublicKeyResponse) {}
  // Returns all objects of a given kind.
  rpc GetObjectsByKind(GetObjectsByKindRequest)
      returns (GetObjectsByKindResponse) {}
  // Returns all metrics of a given custom object.
  rpc GetCustomObjectMetrics(GetCustomObjectMetricsRequest)
      returns (GetCustomObjectMetricsResponse) {}
  rpc GetEffectiveGitSettings(GetEffectiveGitSettingsRequest)
      returns (GetEffectiveGitSettingsResponse) {}
  rpc GetEffectivePipelineSettings(GetEffectivePipelineSettingsRequest)
      returns (GetEffectivePipelineSettingsResponse) {}
  rpc GetEffectiveNotificationSettings(GetEffectiveNotificationSettingsRequest)
      returns (GetEffectiveNotificationSettingsResponse) {}
}

// The request to create a project.
message CreateRequest {
  // The initializers of the project.
  repeated api.v1.project.Update initializers = 1;
  // ID of the project to create.
  string project_id = 2;
}

// The response to Create a project.
message CreateResponse {
  // The created project.
  api.v1.project.Project project = 1;
}

// Request to delete a project.
message DeleteRequest {
  // Id of the project to delete
  string project_id = 1;
}

// Empty response for deleting a project.
message DeleteResponse {}

// Update the name field of a project.
message UpdateRequest {
  // the updates to apply.
  repeated api.v1.project.Update updates = 1;
  // The project to update.
  string project_id = 2;
}

// Empty response for updating a project.
message UpdateResponse {}

// Request for getting a project.
message GetRequest {
  // The project to get.
  string project_id = 1;
}

// Response for getting a project.
message GetResponse {
  // The retrieved project.
  api.v1.project.Project project = 1;
}

// Request for listing projects.
message ListRequest {
  // Pagination options.
  model.Pagination pagination = 1;
}

// Response for listing projects.
message ListResponse {
  // The retrieved projects.
  repeated api.v1.project.Project projects = 1;
  // Total number of projects.
  int64 total = 2;
}

// Request to get the public key of a project.
message PublicKeyRequest {
  // The project to get the key from.
  string project_id = 1;
}

// Response for getting a projects public key.
message PublicKeyResponse {
  // the retrieved public key.
  string public_key = 1;
}

// Request to get custom metrics for a project and environment.
message GetCustomObjectMetricsRequest {
  // The object to get metrics for.
  model.ObjectReference object_reference = 1;
  // The project to get metrics for.
  string project_id = 2;
  // The environment to get metrics for.
  string environment_id = 3;
}

// Response for getting custom metrics for a project and environment.
message GetCustomObjectMetricsResponse {
  // The metrics for the given object.
  repeated model.Metric metrics = 1;
  // The project the metrics are for.
  string project_id = 2;
  // The environment the metrics are for.
  string environment_id = 3;
}

// Model of a kubernetes object.
message KubernetesObject {
  // Type / kind of the object.
  string kind = 1;
  // Name of the object.
  string name = 2;
}

// Request to get all objects of a given kind in a project and environment.
message GetObjectsByKindRequest {
  // The kind of the objects to get.
  string kind = 1;
  // The api version of the objects to get.
  string api_version = 2;
  // The project to get the objects for.
  string project_id = 3;
  // The environment to get the objects for.
  string environment_id = 4;
}

// Response for getting all objects of a given kind in a project and
// environment.
message GetObjectsByKindResponse {
  // The objects of the given kind.
  repeated KubernetesObject objects = 1;
}

message GetEffectiveGitSettingsRequest {
  string project_id = 1;
}

message GetEffectiveGitSettingsResponse {
  model.GitStore git = 1;
}

message GetEffectivePipelineSettingsRequest {
  string project_id = 1;
  // If set, the response will contain information as to whether the pipeline is
  // already running for that capsule.
  string capsule_id = 2;
}

message GetEffectivePipelineSettingsResponse {
  message Pipeline {
    model.Pipeline pipeline = 1;
    bool already_running = 2;
  }

  repeated Pipeline pipelines = 1;
}

message GetEffectiveNotificationSettingsRequest {
  string project_id = 1;
}

message GetEffectiveNotificationSettingsResponse {
  repeated model.NotificationNotifier notifiers = 1;
}
